# warp-cors

./: .dockerignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
hooks/: post_push
src/: app.rs  client.rs  error.rs  handlers.rs  main.rs  routes.rs
src/filters/: client.rs  cors.rs  has_header.rs  mod.rs  path.rs  request.rs
