[package]
name = "warp-cors"
version = "0.2.0"
authors = ["Jason Liquorish"]
description = "warp-cors is a proxy server which enables CORS for the proxied request"
documentation = "https://github.com/Bassetts/warp-cors"
homepage = "https://github.com/Bassetts/warp-cors"
repository = "https://github.com/Bassetts/warp-cors"
readme = "README.md"
keywords = ["cors", "proxy"]
categories = ["command-line-utilities", "web-programming"]
license  = "MIT"
edition = "2018"

[dependencies]
clap = { version = "2.33", default-features = false }
futures-util = "0.3"
hyper-rustls = "0.20"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "signal"] }
url = "2.1"
warp = "0.2"
